--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.appanim-enter{
+    opacity: 0.01;
+}
+.appanim-enter-active{
+    opacity: 1;
+    transition: opacity 1200ms ease-in;
+
+}
+.appanim-enter-done{
+    opacity: 1;
+}
+.appanim-exit{
+    opacity: 1;
+}
+.appanim-exit-active{
+    opacity: 0.01;
+  transition: opacity 1200ms ease-in;
+    
+}
+.appanim-exit-active-done{
+    opacity: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
